fixing the search overlap
git-svn-id: svn://dev.anidb.net/svn/trunk@722 bed53a55-4da3-433c-baf4-d4f70f2fd34a

--- a/css/sub/zakura/layout-macro.css
+++ b/css/sub/zakura/layout-macro.css
@@ -61,7 +61,7 @@ body.nonav form textarea {
 	top: 0;
 	left: auto;
 	right: 1em;
-	width: 30em;
+	width: 35em;
 	margin-top: 110px;
 	padding: 0;
 }
